--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon --config nodemon.json src/app.ts"
+        "dev": "nodemon --config nodemon.json src/app.ts",
+        "build": "tsc",
+        "start": "node build/app.js"
     },
     "author": "",
     "license": "ISC",
