--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon --config nodemon.json src/app.ts",
+        "dev": "nodemon src/app.ts",
         "build": "tsc",
         "start": "node build/app.js"
     },
