--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon src/app.ts",
-        "build": "tsc",
+        "build": "npx tsc",
         "start": "node build/app.js"
     },
     "author": "",
@@ -16,9 +16,9 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "mongodb": "^5.6.0",
-        "mongoose": "^7.3.1",
-        "nanoid": "^3.3.6",
+        "mongodb": "^5.7.0",
+        "mongoose": "^7.3.2",
+        "nanoid": "^4.0.2",
         "typescript": "^5.1.6",
         "yup": "^1.2.0"
     },
@@ -28,7 +28,7 @@
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/nanoid": "^3.0.0",
-        "@types/node": "^20.3.2",
+        "@types/node": "^20.4.1",
         "@types/yup": "^0.32.0",
         "ts-node": "^10.9.1"
     }
