--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon src/app.ts",
-        "build": "npx tsc",
+        "build": "npm install && tsc",
         "start": "node build/app.js"
     },
     "author": "",
